example/fail2.exp
fail2.coo:17:1: error: duplicate inheritance, need override for member vfunc_a
